--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,20 @@
-language: c
-compiler: gcc
-script: ./src && make
+sudo: false
+language: cpp
+compiler:
+  - gcc
+
+os:
+  - linux
+
+addons:
+  apt:
+    packages:
+    - gcc-4.8
+    - g++-4.8
+
+install:
+  - export CXX="g++-4.8" CC="gcc-4.8"
+script:
+  - mkdir build
+  - cd build
+  - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make
